mise en place du style du composant header

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,5 +1,6 @@
 // Generic
 $primary-color: #476AED;
+$bg-dark-color: #151925;
 $dark-color: #340DA4;
 $alt-color:#6B0AB8;
 $alt-light-color: #F62992;
