--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,5 +1,32 @@
 @use 'src/styles/vars';
 
 .header {
-  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid black;
+  background-color: vars.$bg-dark-color;
+
+  &-button {
+    font-family: vars.$global-font;
+    margin:0.5em;
+    background-color: vars.$primary-color;
+    border: none;
+    border-radius: 0.3em;
+    box-shadow: 0px 0px 2px #8ea1ea;
+    color: white;
+    height: 2em;
+    width: 6em;
+
+    &:hover {
+        box-shadow: 0px 0px 4px #8ea1ea;
+    }
+  }
+
+  &-img {
+    width: 8em;
+    height: 4em;
+    margin: 0.3em 0;
+  }
 }
+// vars.$bg-dark-color
