mise en place du store, reducers et actions. mise en place du menu et de la modale de connexion
Co-authored-by: Célia Hamouche <CeliaHmc@users.noreply.github.com>

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -4,7 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 1px solid black;
   background-color: vars.$bg-dark-color;
 
   &-button {
@@ -23,9 +22,20 @@
     }
   }
 
+  &-logo {
+    display: flex;
+    align-items: center;
+  }
+
+  &-title {
+    font-family: 'Stick No Bills', sans-serif;
+    color: #476AED;
+    font-size: 2em;
+  }
+
   &-img {
-    width: 8em;
-    height: 4em;
+    width: 6em;
+    height: 3em;
     margin: 0.3em 0;
   }
 }
