--- a/src/components/App/Menu/menu.scss
+++ b/src/components/App/Menu/menu.scss
@@ -2,14 +2,14 @@
 @use 'src/styles/vars';
 
 .menu {
-  position: fixed;
-  left: 0;
-  bottom: 0;
+  // position: fixed;
+  // left: 0;
+  // bottom: 0;
+  height: 100vh;
   width: vars.$menuWidth;
   padding: vars.$halfGutter 0;
-  background-color: color.scale(vars.$color, $lightness: -80%);
+  background-color: vars.$bg-dark-color;
   box-shadow: inset -20px 0 20px -20px rgba(0,0,0,.75);
-  height: 80%;
   
   @media (max-width: vars.$small) {
     width: vars.$smallMenuWidth;
