--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,6 +1,8 @@
 @use 'src/styles/vars';
 
 .header {
+  // position: fixed;
+  // width: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
