--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -4,6 +4,7 @@ $primary-color: #476AED;
 $bg-dark-color: #151925;
 $dark-color: #340DA4;
 $alt-color:#6B0AB8;
+$light-alt-color:#791fc2;
 $alt-light-color: #F62992;
 $light-color: #50CFEF;
 $gutter: 2rem;
