--- a/src/components/App/Menu/menu.scss
+++ b/src/components/App/Menu/menu.scss
@@ -2,6 +2,7 @@
 @use 'src/styles/vars';
 
 .menu {
+  position: relative;
   height: 100vh;
   width: vars.$menuWidth;
   padding: vars.$halfGutter 0;
@@ -32,7 +33,7 @@
 
 .toggler {
   transition: all 0.3s ease-in-out;
-  
+
   &--closed {
     transform: translateX(-18em);
   }
