--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,5 +4,6 @@
 body {
   font-family: vars.$global-font;
   background: linear-gradient(vars.$primary-color, vars.$alt-color);
-  height: 100vh;
+  height: 100%;
+  position: relative;
 }
