Modification CSS pour placement des éléments - Début de la page home

--- a/src/components/App/Menu/menu.scss
+++ b/src/components/App/Menu/menu.scss
@@ -2,8 +2,8 @@
 @use 'src/styles/vars';
 
 .menu {
-  position: relative;
-  height: 100vh;
+  position: fixed;
+  height: 90vh;
   width: vars.$menuWidth;
   padding: vars.$halfGutter 0;
   background-color: vars.$bg-dark-color;
