--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -4,6 +4,5 @@
 body {
   font-family: vars.$global-font;
   background: linear-gradient(vars.$primary-color, vars.$alt-color);
-  height: 100%;
-  position: relative;
+  height: 100vh;
 }
