mise en place des styles pour le composant home. Mise en place de la partie responsive du header

--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -14,7 +14,7 @@ $global-font: 'Play', sans-serif;
 $global-font-weight: 300;
 
 // Title
-$title-font: 'Bungee Shade';
+$title-font:  'Bungee';
 $title-font-weight: 700;
 $title-color: #AEB6D1;
 $title-font-size: 3em;
