--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -42,4 +42,16 @@
     margin: 0.3em 0;
   }
 }
-// vars.$bg-dark-color
+
+@media screen and (max-width: 640px ) {
+  .header {
+    
+    &-title {
+    display: none;
+    }
+
+    &-button {
+      width: 4em;
+    }
+  }
+}
