--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,11 +1,21 @@
 @use 'src/styles/vars';
 
 .home {
+  width: 60%;
+  height: 100%;
+  margin: 1em auto;
   display: flex;
-  flex-flow: column wrap;
+  flex-flow: column;
 }
 
 h1 {
-  font-family: vars.$title-font;
-  color: vars.$alt-light-color;
+  width: 60%;
+  padding: 0.5em;
+  font-size: 1.5em;
+  margin: 0 auto 1em;
+  text-align: center;
+  border-radius: 10px;
+  background-color: vars.$bg-dark-color;
+  font-family: vars.$global-font;
+  color: vars.$primary-color;
 }
