Résolution du bug du background

--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -2,7 +2,7 @@
 
 .footer {
   background-color: vars.$bg-dark-color;
-  position:absolute;
+  position:fixed;
   bottom:0;
   width:100%;
   color: white;
