--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -3,9 +3,15 @@
 .home {
   width: 60%;
   height: 100%;
-  margin: 1em auto;
+  margin: 1em auto 0;
   display: flex;
   flex-flow: column;
+
+  &-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
 }
 
 h1 {
