--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
   background-color: vars.$bg-dark-color;
   width:100%;
+  z-index: 1;
   color: white;
   padding: 1em;
   display: flex;
