--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -7,21 +7,60 @@
   display: flex;
   flex-flow: column;
 
+  &-wrapper {
+    background-color: rgb(0, 0, 0, 0.1);
+    border: solid 1px vars.$dark-color;
+    border-radius: 5px;
+    box-shadow: 0px 0px 2px vars.$dark-color;
+  }
+
+  &-title {
+    width: 60%;
+    padding: 0.5em;
+    font-size: 1.5em;
+    margin: 2em auto 1.5em;
+    text-align: center;
+    border-radius: 10px;
+    background-color: vars.$bg-dark-color;
+    font-family: vars.$global-font;
+    color: vars.$primary-color;
+  }
+
+  &-platform {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin-bottom: vars.$gutter;
+  }
+
+  &-text {
+    text-align: center;
+    font-size: 1.5em;
+    padding: 0.5em 0;
+
+    &-title {
+      font-size: 1.5em;
+    }
+
+    &-sub {
+      font-size: 0.8em;
+    }
+  }
+
+  &-discord {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  &-join {
+    text-align: center;
+    font-size: 1.2em;
+    padding-bottom: 0.5em;
+  }
+
   &-cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
   }
-}
-
-h1 {
-  width: 60%;
-  padding: 0.5em;
-  font-size: 1.5em;
-  margin: 0 auto 1em;
-  text-align: center;
-  border-radius: 10px;
-  background-color: vars.$bg-dark-color;
-  font-family: vars.$global-font;
-  color: vars.$primary-color;
 }
