--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,4 +5,5 @@ body {
   font-family: vars.$global-font;
   background: linear-gradient(vars.$primary-color, vars.$alt-color);
   height: 100%;
+  z-index: -1;
 }
