Ajout boutton de soumission sur Search

--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -54,4 +54,20 @@
   &-options {
     background-color: vars.$primary-color;
   }
+
+  &-button {
+    font-family: vars.$global-font;
+    margin:0.5em;
+    background-color: vars.$primary-color;
+    border: none;
+    border-radius: 0.3em;
+    box-shadow: 0px 0px 2px #8ea1ea;
+    color: white;
+    height: 2em;
+    width: 6em;
+
+    &:hover {
+        box-shadow: 0px 0px 4px #8ea1ea;
+    }
+  }
 }
