--- a/src/components/PlayerCard/playercard.scss
+++ b/src/components/PlayerCard/playercard.scss
@@ -1,1 +1,61 @@
+@use 'src/styles/vars';
 
+.playercard {
+  width: 20%;
+  height: 100%;
+  margin: 1em auto 0;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  color: vars.$light-color;
+
+  &-wrapper {
+    background-color: vars.$bg-dark-color;
+    width: 300px;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
+  }
+
+  &-img {
+    border: 1px solid vars.$light-color;
+    border-radius: 50%;
+    padding: 7px;
+    margin: vars.$gutter 0 vars.$gutter *0.5 0;
+  }
+
+  &-title {
+    margin: 0.5em;
+    font-size: 1.5em;
+  }
+
+  &-subtitle {
+    margin-bottom: 0.5em;
+    font-size: 0.8em;
+    text-transform: uppercase;
+  }
+
+  &-text {
+    margin: 0 1em 1em 1em;
+  }
+
+  &-btn {
+    background-color: vars.$light-color;
+    border: 1px solid vars.$light-color;
+    border-radius: 3px;
+    color: #231E39;
+    font-family: Montserrat, sans-serif;
+    font-weight: 500;
+    padding: 10px 25px;
+    margin-bottom: 1em;
+
+    &:hover {
+      border: 1px solid vars.$light-color;
+      background-color: transparent;
+      color: vars.$light-color;
+    }
+  }
+}
