--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,7 +1,7 @@
 @use 'src/styles/vars';
 
 .home {
-  width: 60%;
+  width: 70%;
   height: 100%;
   margin: 1em auto 0;
   display: flex;
@@ -62,5 +62,15 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
+  }
+}
+
+@media screen and (max-width: 640px ) {
+  .home {
+    width: 90%;
+
+    &-title {
+      width: 100%;
+    }
   }
 }
