--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -2,6 +2,8 @@
 
 .search {
   min-height: 100vh;
+  width: 70%;
+  margin: auto;
 }
 
 .form-wrapper {
@@ -9,7 +11,7 @@
   border: solid 1px vars.$dark-color;
   border-radius: 5px;
   box-shadow: 0px 0px 2px vars.$dark-color;
-  width:60%;
+  width:90%;
   margin: 2em auto;
 }
 
@@ -72,5 +74,18 @@
     &:hover {
         box-shadow: 0px 0px 4px #8ea1ea;
     }
+  }
+}
+
+@media screen and (max-width: 640px ) {
+  .search {
+    width: 90%;
+    margin: auto;
+  }
+  .form-wrapper {
+    width: 100%;
+  }
+  .form-platform {
+    width: 100%;
   }
 }
