--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -1,7 +1,11 @@
 @use 'src/styles/vars';
 
 .search {
-  min-height: 100vh;
+  width: 70%;
+  height: 100%;
+  margin: 1em auto 0;
+  display: flex;
+  flex-flow: column;
 }
 
 .form-wrapper {
@@ -9,7 +13,7 @@
   border: solid 1px vars.$dark-color;
   border-radius: 5px;
   box-shadow: 0px 0px 2px vars.$dark-color;
-  width:60%;
+  width:90%;
   margin: 2em auto;
 }
 
@@ -71,6 +75,23 @@
 
     &:hover {
         box-shadow: 0px 0px 4px #8ea1ea;
+    }
+  }
+}
+
+.player-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin-bottom: 2em;
+}
+
+@media screen and (max-width: 640px ) {
+  .search {
+    width: 95%;
+
+    &-title {
+      width: 100%;
     }
   }
 }
