Amélioration pour que la nav bar ne passe pas sous la card player

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -8,6 +8,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: vars.$bg-dark-color;
+  z-index: 1;
 
   &-button {
     font-family: vars.$global-font;
