--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -85,18 +85,76 @@
   }
 
   &-games {
-    width: 80%;
-    display: flex;
-    margin: vars.$gutter;
-  }
-
-  &-subwrapper {
-    width: 50%;
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin: vars.$gutter;
+  }
+
+  &-subtitle {
+    font-size: 1.5em;
+    margin-bottom: 0.5em;
+  }
+
+  &-lasttitle {
+    font-size: 1em;
+    margin-bottom: 0.5em;
+    display: flex;
   }
   
+  &-list {
+    display: flex;
+    flex-direction: column;
+  }
+
+  &-item {
+    display: flex;
+    justify-content: flex-end;
+    color: lightgray;
+
+      &-button {
+        margin: 0 3em 0.8em 3em;
+        background-color: vars.$light-color;
+        border: 1px solid vars.$light-color;
+        border-radius: 3px;
+        color: vars.$bg-dark-color;
+        font-weight: 500;
+        font-size: 0.8em;
+        padding: 3px 10px;
+    
+        &:hover {
+          border: 1px solid vars.$light-color;
+          background-color: transparent;
+          color: vars.$light-color;
+        } 
+      }
+
+      &-check {
+        cursor: pointer;
+        width: 45px;
+        height: 20px;
+        background: vars.$light-color;
+        border-radius: 10px;
+        position: relative;
+        display: inline-block;
+
+        &:after {
+          content: '';
+          position: absolute;
+          top: 1px;
+          left: 3px;
+          width: 18px;
+          height: 18px;
+          background: vars.$bg-dark-color;
+          border-radius: 10px;
+          transition: 0.3s;
+        }
+      }
+
+      &-checkbox:checked + label:after {
+        transform: translateX(50px);
+      }
+  }
 }
 
 @media screen and (max-width: 640px ) {
