Ajout d'un bouton de déconnexion quand l'user est connecté + rendre les boutons co/inscription invisibles quand user connecté

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -44,6 +44,14 @@
   }
 }
 
+.logged {
+  display: none;
+}
+
+.unlogged {
+  margin-right: 1em;
+}
+
 @media screen and (max-width: 640px ) {
   .header {
     
