--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -157,6 +157,12 @@
   }
 }
 
+.players-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media screen and (max-width: 640px ) {
   .profile {
     width: 95%;
