--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -90,14 +90,27 @@
 
   &-games {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-around;
     align-items: center;
     margin: vars.$gutter;
+
+    &-wrapper {
+      width: 45%;
+      padding-left: vars.$gutter;
+    }
+
+    &-wrappertwo {
+      // width: 40%;
+      border-left: 1px solid vars.$light-color;
+      padding-left: vars.$gutter;
+    }
   }
 
   &-subtitle {
     font-size: 1.5em;
     margin-bottom: 0.5em;
+    text-align: center;
   }
 
   &-lasttitle {
@@ -169,14 +182,17 @@
 
 @media screen and (max-width: 640px ) {
   .profile {
-    width: 95%;
+    width: 100%;
 
-    // &-wrapper {
-    // border-radius: 0;
-    //   &-bg {
-    //     border-top-left-radius: 0px;
-    //     border-top-right-radius: 0px;
-    //   }
-    // }
+    &-games {
+
+      &-wrapper {
+        width: 100%;
+      }
+  
+      &-wrappertwo {
+        border-left: none;
+      }
+    }
   }
 }
