--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -26,8 +26,37 @@
     }
   }
 
+  .line {
+    height: 3px;
+    width: 100%;
+    background: white;
+    transform-origin: 1px;
+    transition: all 0.3s linear;
+  }
+
+  .line1 {
+    transform: /*translateX(4px)*/ scale(1.4) rotate(45deg);
+    animation: rotateR 1.5s cubic-bezier(.5, .2, .2, 1);
+  }
+
+  .line2 {
+    opacity: 0;
+    animation: fade 1.5s cubic-bezier(.1, .8, .1, 1);
+  }
+
+  .line3 {
+    transform: translateY(3px) scale(1.4) rotate(-45deg);
+    animation: rotateL 1.5s cubic-bezier(.5, .2, .2, 1);
+  }
+
   &-logo {
+    position: absolute;
+    z-index: -1;
+    left: 0;
+    right: 0;
+    margin: auto;
     display: flex;
+    justify-content: center;
     align-items: center;
   }
 
