--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -9,12 +9,13 @@
   color: vars.$light-color;
 
   &-wrapper {
+    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     background-color: vars.$bg-dark-color;
-    width: 80% ;
+    width: 90% ;
     border-radius: 10px;
     box-shadow: 0px 10px 20px -10px rgba(0,0,0,0.75);
 
