--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -9,7 +9,6 @@
   color: vars.$light-color;
 
   &-wrapper {
-    z-index: -1;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -21,6 +20,8 @@
 
     &-bg {
       background-image: url(https://wallpapercave.com/wp/wp6856179.jpg);
+      position: relative;
+      z-index:1;
       filter: grayscale(50%);
       background-position: center;
       background-repeat: no-repeat;
@@ -48,6 +49,7 @@
       align-items: center;
       justify-content: center;
       flex-direction: column;
+      width: 100%;
       margin-top: 5em;
     }
   }
@@ -68,6 +70,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    width: 30%;
     margin: 1em auto 1em;
   }
 
@@ -76,6 +79,7 @@
     justify-content: center;
     flex-direction: column;
     color: lightgray;
+    width: 100%;
     margin-bottom: 0.5em;
     font-size: 0.8em;
     text-transform: uppercase;
@@ -93,16 +97,16 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-    align-items: center;
+    width: 100%;
     margin: vars.$gutter;
 
     &-wrapper {
-      width: 45%;
+      max-width: 50%;
       padding-left: vars.$gutter;
     }
 
     &-wrappertwo {
-      // width: 40%;
+      max-width: 50%;
       border-left: 1px solid vars.$light-color;
       padding-left: vars.$gutter;
     }
@@ -128,50 +132,25 @@
   &-item {
     display: flex;
     justify-content: flex-end;
+    align-items: center;
     color: lightgray;
 
-      &-button {
-        margin: 0 3em 0.8em 3em;
-        background-color: vars.$light-color;
+    &-button {
+      margin: 0.8em 3em;
+      background-color: vars.$light-color;
+      border: 1px solid vars.$light-color;
+      border-radius: 3px;
+      color: vars.$bg-dark-color;
+      font-weight: 500;
+      font-size: 0.8em;
+      padding: 3px 10px;
+  
+      &:hover {
         border: 1px solid vars.$light-color;
-        border-radius: 3px;
-        color: vars.$bg-dark-color;
-        font-weight: 500;
-        font-size: 0.8em;
-        padding: 3px 10px;
-    
-        &:hover {
-          border: 1px solid vars.$light-color;
-          background-color: transparent;
-          color: vars.$light-color;
-        } 
-      }
-
-      &-check {
-        cursor: pointer;
-        width: 45px;
-        height: 20px;
-        background: vars.$light-color;
-        border-radius: 10px;
-        position: relative;
-        display: inline-block;
-
-        &:after {
-          content: '';
-          position: absolute;
-          top: 1px;
-          left: 3px;
-          width: 18px;
-          height: 18px;
-          background: vars.$bg-dark-color;
-          border-radius: 10px;
-          transition: 0.3s;
-        }
-      }
-
-      &-checkbox:checked + label:after {
-        transform: translateX(50px);
-      }
+        background-color: transparent;
+        color: vars.$light-color;
+      } 
+    }
   }
 }
 
@@ -186,12 +165,17 @@
     width: 100%;
 
     &-games {
+      display: flex;
+      width: 85%;
 
       &-wrapper {
-        width: 100%;
+        max-width: 90%;
+        padding-left: 0;
       }
   
       &-wrappertwo {
+        max-width: 90%;
+        padding-left: 0;
         border-left: none;
       }
     }
