--- a/src/components/Profile/profile.scss
+++ b/src/components/Profile/profile.scss
@@ -136,7 +136,7 @@
     color: lightgray;
 
     &-button {
-      margin: 0.8em 3em;
+      margin: 0.8em 0 0.8em 3em;
       background-color: vars.$light-color;
       border: 1px solid vars.$light-color;
       border-radius: 3px;
