--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -1,16 +1,17 @@
 @use 'src/styles/vars';
 
 .home {
-  width: 70%;
+  width: 100%;
   height: 100%;
-  margin: 1em auto 0;
+  margin: 0 auto 0;
   display: flex;
   flex-flow: column;
 
+  &-content {
+  }
+
   &-wrapper {
-    background-color: rgb(0, 0, 0, 0.1);
-    border: solid 1px vars.$dark-color;
-    border-radius: 5px;
+    background: url(https://zupimages.net/up/22/46/dyn9.png);
     box-shadow: 0px 0px 2px vars.$dark-color;
   }
 
@@ -59,6 +60,8 @@
   }
 
   &-cards {
+    width: 70%;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
@@ -67,10 +70,10 @@
 
 @media screen and (max-width: 640px ) {
   .home {
-    width: 90%;
+    width: 100%;
 
     &-title {
-      width: 100%;
+      width: 90%;
     }
   }
 }
