Reprise mise en page des cars games dans le composant Search

--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -79,6 +79,12 @@
   }
 }
 
+.game-cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
 .player-cards {
   display: flex;
   flex-wrap: wrap;
