--- a/src/components/PlayerCard/playercard.scss
+++ b/src/components/PlayerCard/playercard.scss
@@ -31,6 +31,7 @@
   }
 
   &-subtitle {
+    display: flex;
     margin-bottom: 0.5em;
     font-size: 0.8em;
     text-transform: uppercase;
@@ -55,4 +56,23 @@
       color: vars.$light-color;
     }
   }
+}
+
+.light {
+  margin-left: 0.5em;
+}
+
+.dispo {
+  border-radius: 50%;
+  background-color: lightgreen;
+  box-shadow: 0px 0px 8px 2px rgba(221, 255, 0, 0.867);
+  width: 10px;
+  height: 10px;
+}
+.indispo {
+  border-radius: 50%;
+  background-color: vars.$alt-light-color;
+  box-shadow: 0px 0px 10px 2px rgb(217, 0, 255);
+  width: 10px;
+  height: 10px;
 }
