--- a/src/components/Search/search.scss
+++ b/src/components/Search/search.scss
@@ -99,6 +99,8 @@
   flex-wrap: wrap;
   justify-content: center;
   margin-bottom: 2em;
+  width: 70%;
+  margin: 0 auto;
 }
 
 @media screen and (max-width: 640px ) {
