--- a/src/styles/_vars.scss
+++ b/src/styles/_vars.scss
@@ -1,12 +1,14 @@
 // Generic
 $text-color:white;
 $primary-color: #476AED;
+$light-primary-color: #508df0;
 $bg-dark-color: #151925;
 $dark-color: #340DA4;
 $alt-color:#6B0AB8;
 $light-alt-color:#791fc2;
 $alt-light-color: #F62992;
 $light-color: #50CFEF;
+$third-color: #cd1ab8;
 $gutter: 2rem;
 
 // Global
