--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -63,6 +63,7 @@
   &-title {
     font-family: 'Stick No Bills', sans-serif;
     color: #476AED;
+    text-shadow: 0 0 20px vars.$light-primary-color;
     font-size: 2em;
   }
 
