--- a/src/components/Home/home.scss
+++ b/src/components/Home/home.scss
@@ -8,6 +8,8 @@
   flex-flow: column;
 
   &-wrapper {
+    display: flex;
+    flex-direction: column;
     background: url(https://zupimages.net/up/22/46/dyn9.png);
     box-shadow: 0px 0px 2px vars.$dark-color;
   }
